test/errors/indexed_offsets_error/zs/logical_or_operator_in_array_expression_error.zs
package logical_or_operator_in_array_expression_error;

struct LogicalOrOperatorInArrayExpressionError
{
    uint32 offsets[];
offsets[@index || true]:
    string fields[];
};
